minor adjustments to layouts

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@
 
 @layer components {
     .descriptive-text {
-        @apply text-neutrals-80 text-xs mt-7;
+        @apply text-neutrals-80 text-xs my-4;
     }
 
     .section-tag {
