--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
     }
 
     h1 {
-        @apply text-primary-100 text-2xl;
+        @apply text-primary-100 text-4xl;
     }
 
     h2 {
@@ -16,9 +16,9 @@
     }
 }
 
-@layer components {
+@layer components { 
     .descriptive-text {
-        @apply text-neutrals-80 text-xs my-4;
+        @apply text-neutrals-80 text-base my-4;
     }
 
     .section-tag {
